# configwidgets

./: .readthedocs.yaml  Readme-dev.md  Readme.md  pyproject.toml  requirements_doc.txt
docs/: requirements.txt
docs/source/: change.rst  conf.py  index.rst  package.rst  package_buttons.rst  package_containers.rst  package_datetime.rst  package_numbers.rst  package_path.rst  package_text.rst  setup.rst
example/: example.py  example.ui  example_group.py  example_group.ui  example_plain.py  example_plain.ui
src/configwidgets/: __init__.py  buttons.py  checkbox.py  containers.py  datetime.py  error.py  lineedit.py  numbers.py  path.py  spinbox.py  text.py
src/configwidgets/static/: pathselect.ui
tests/: conftest.py  test_basic.py  test_buttons.py  test_containers.py  test_datetime.py  test_numbers.py  test_path.py  test_text.py
