[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configwidgets"
authors = [
    {name = "Kolja Wagner", email="k.wagner@meteo.uni-hannover.de"}
]
description = "Subclassing PyQt5.QtWidgets to syncronize state in QSettings object."
readme = "Readme.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "configwidgets.__version__"}
